<resources>
    <string name="app_name">Memorizer</string>
    <string name="activity_memo_create">Create Memo</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- 메모 Content -->
    <string name="memo">Memo</string>
    <string name="alarm_desc">Alarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="next_alert">Next</string>
    <string name="posted_date">Posted date</string>
    <string name="deleted"> was deleted.</string>
    <string name="memo_search">Search</string>
    <string name="filter">Filter</string>
    <string name="left_days">days lefts</string>
    <string name="memo_loading_widget">Loading notes&#8230;</string>
    <string name="memo_not_regist_widget">Not Registered</string>
    <string name="memo_created">Posted</string>

    <!-- 메모 생성 -->
    <string name="create_notice">The created/edited memo will progress from the current time.</string>
    <string name="write_memo">Write Memo.</string>
    <string name="term">Interval(in Days)</string>
    <string name="one_day">1 day</string>
    <string name="two_day">2 days</string>
    <string name="three_day">3 days</string>
    <string name="four_day">4 days</string>
    <string name="five_day">5 days</string>
    <string name="six_day">6 days</string>
    <string name="a_week">7 days</string>
    <string name="ten_day">10 days</string>
    <string name="two_week">14 days</string>
    <string name="twenty_day">20 days</string>
    <string name="thirty_day">30 days</string>
    <string name="end_date">End Date</string>
    <string name="unlimit">Unlimit</string>
    <string name="alert_time">Alert Time</string>
    <string name="random">Random</string>
    <string name="choice_date">Choice Date</string>
    <string name="choice_time">Choice Time</string>
    <string name="during_date">Until</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="empty_memo">Empty Memo.</string>
    <string name="memo_saved">Memo saved.</string>
    <string name="label">Label</string>
    <string name="label_name">Label Name</string>
    <string name="memo_create">memo create</string>
    <string name="memo_delete">memo delete</string>
    <string name="checklist">Checklist</string>
    <string name="add_checklist">Add Checklist</string>

    <!-- 알람 -->
    <string name="remember">Do you remember?</string>
    <string name="memo_placeholder">Memo contents</string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>

    <!-- 검색 -->
    <string name="all">ALL</string>
    <string name="no_label">No Label</string>

    <!-- 위젯 -->
    <string name="widget_select_name">Memorizer Preview</string>
    <string name="widget_list_name">Memorizer List View</string>

    <!-- 공지 -->
    <string name="notice_title">Update Notes(v1.11.0)</string>
    <string name="notice">- Now we can swipe memos when the memo alert in same time.\n- Added widget(List, Select).\n- Fixed filter function.\n- Changed main view\'s design (memo list).</string>

    <!-- 설정용 -->
    <string name="cloud_disconnect">This process will disconnect cloud storage. Are you sure disconnect this storage?</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">connected</string>
    <string name="backup_setting">Backup Setting</string>

    <!-- 만든이 -->
    <string name="activity_developer">Dev Info</string>
    <string name="devInfo_intro">DevGD\'s Work</string>
    <string name="contact">Please contact me by mail at the following\nquestions or problems are discovered.</string>
    <string name="email" translatable="false">GDmail91@gmail.com</string>
    <string name="copyright" translatable="false">Copyright ⓒ 2016 DevGD. All rights reserved.</string>

    <!-- id -->
    <string name="google_id">920389922391-r6tnenk9scn4vh2qgjlc1rosh6fgvm33.apps.googleusercontent.com</string>
    <string name="dropbox_id">yjifdzmw3rbxksr</string>
    <string name="dropbox_sec">art4q5vkrfatbh5</string>
    <string name="one_id">6f0055e9-005d-4289-8c99-c72a00f0a504</string>
    <string name="one_sec">Xx1sbgQLMN2vckQs7jP0qmS</string>

</resources>
