<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/days_of_1"
        android:title="@string/one_day" />
    <item
        android:id="@+id/days_of_3"
        android:title="@string/three_day" />
    <item
        android:id="@+id/days_of_5"
        android:title="@string/five_day" />
    <item
        android:id="@+id/days_of_7"
        android:title="@string/a_week" />
    <item
        android:id="@+id/days_of_10"
        android:title="@string/ten_day" />
    <item
        android:id="@+id/days_of_14"
        android:title="@string/two_week" />
    <item
        android:id="@+id/days_of_20"
        android:title="@string/twenty_day" />
    <item
        android:id="@+id/month_of_1"
        android:title="@string/thirty_day" />

</menu>