<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/memoPad">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/remember"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:id="@+id/title_view"
        android:background="@color/memoPadAccent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:layout_above="@+id/alram_confirm"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/memo_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:id="@+id/message_view" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/ok"
        android:textSize="18sp"
        android:textColor="@color/memoPadAccent"
        android:id="@+id/alram_confirm"/>

</RelativeLayout>